Fix maxGroupSize bug on overview page

--- a/views/overview.pug
+++ b/views/overview.pug
@@ -34,7 +34,7 @@ block content
             .card__data
               svg.card__icon
                 use(xlink:href='/img/icons.svg#icon-user')
-              span= `${tour.magGroupSize} people`
+              span= `${tour.maxGroupSize} people`
 
           .card__footer
             p
